--- a/Pacman.html
+++ b/Pacman.html
@@ -6,14 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pacman</title>
-    <style>
-        #startScreen {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-    </style>
+
     <style>
         #gameOverImage {
             position: absolute;
@@ -25,6 +18,8 @@
 </head>
 
 <body style="margin: 0; background-color: black;">
+    
+    
     <img id="startScreen" src="pressEnter.png" style="display: none;">
      <audio controls autoplay loop>
         <source src = "intro.wav" >
@@ -43,5 +38,16 @@
     <img id="gameOverImage" src="gameover.png" style="display: none;">
 
 </body>
+<body>
+    <canvas id="canvas" width="500" height="500"></canvas>
+    <div id="instructions" style="position: absolute; top: 10px; right: 10px; color: white; font-size: 16px;">
+      <h2>Hướng dẫn Chơi</h2>
+      <p>Dùng các phím mũi tên để điều khiển Pacman.</p>
+      <p>Ăn hết tất cả các coin để thắng.</p>
+      <p>Tránh xa những con ma!</p>
+      <p>Nhấn phím 'Space' để bắt đầu/dừng tạm thời trò chơi.</p>
+      <p>Khi chết nhấn 'Y' để tiếp tục hoặc 'N' để dừng lại.</p>
+    </div>
+    </body>
 
 </html>
